fix(config): update budgets

--- a/apps/angular-store/project.json
+++ b/apps/angular-store/project.json
@@ -10,6 +10,18 @@
       "executor": "@angular-devkit/build-angular:application",
       "outputs": ["{options.outputPath}"],
       "options": {
+        "budgets": [
+          {
+            "type": "initial",
+            "maximumWarning": "2mb",
+            "maximumError": "5mb"
+          },
+          {
+            "type": "anyComponentStyle",
+            "maximumWarning": "2kb",
+            "maximumError": "4kb"
+          }
+        ],
         "outputPath": "dist/apps/angular-store",
         "index": "apps/angular-store/src/index.html",
         "browser": "apps/angular-store/src/main.ts",
@@ -22,7 +34,10 @@
             "input": "apps/angular-store/public"
           }
         ],
-        "styles": ["node_modules/ng-zorro-antd/ng-zorro-antd.min.css","apps/angular-store/src/styles.scss"],
+        "styles": [
+          "node_modules/ng-zorro-antd/ng-zorro-antd.min.css",
+          "apps/angular-store/src/styles.scss"
+        ],
         "scripts": []
       },
       "configurations": {
@@ -30,13 +45,13 @@
           "budgets": [
             {
               "type": "initial",
-              "maximumWarning": "500kb",
-              "maximumError": "1mb"
+              "maximumWarning": "2mb",
+              "maximumError": "5mb"
             },
             {
               "type": "anyComponentStyle",
-              "maximumWarning": "4kb",
-              "maximumError": "8kb"
+              "maximumWarning": "2kb",
+              "maximumError": "4kb"
             }
           ],
           "outputHashing": "all"
