--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "@angular-monorepo/source",
   "version": "0.0.0",
   "license": "MIT",
-  "scripts": {},
+  "scripts": {
+    "build": "npx nx build angular-store --configuration=production"
+  },
   "private": true,
   "dependencies": {
     "@angular/animations": "~19.1.0",
