--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@angular/common": "~19.1.0",
     "@angular/compiler": "~19.1.0",
     "@angular/core": "~19.1.0",
+    "@angular/fire": "^19.0.0",
     "@angular/forms": "~19.1.0",
     "@angular/platform-browser": "~19.1.0",
     "@angular/platform-browser-dynamic": "~19.1.0",
@@ -21,6 +22,7 @@
     "@fullcalendar/interaction": "^6.1.15",
     "@ngx-translate/core": "^16.0.4",
     "@ngx-translate/http-loader": "^16.0.1",
+    "firebase": "^11.4.0",
     "fullcalendar": "^6.1.15",
     "lodash": "^4.17.21",
     "moment": "^2.30.1",
