feat(dependencies): add @netlify/angular-runtime package to project

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@fullcalendar/core": "^6.1.15",
     "@fullcalendar/daygrid": "^6.1.15",
     "@fullcalendar/interaction": "^6.1.15",
+    "@netlify/angular-runtime": "^2.2.2",
     "@ngx-translate/core": "^16.0.4",
     "@ngx-translate/http-loader": "^16.0.1",
     "firebase": "^11.4.0",
