--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
-    "build": "npx nx build angular-store --configuration=production"
+    "build": "npx nx run angular-store:build "
   },
   "private": true,
   "dependencies": {
